Fix editor shifting problem (Fix #233)

--- a/frontend/src/components/Util/TaskEditors/FloatingTaskEditor.module.css
+++ b/frontend/src/components/Util/TaskEditors/FloatingTaskEditor.module.css
@@ -1,4 +1,5 @@
 .Editor {
+  display: none;
   position: fixed;
   width: 300px;
   z-index: 8;
